@@ -1,0 +1,1 @@
+  total heap usage: 6 allocs, 6 frees, XXX bytes allocated
